@@ -1,32 +1,31 @@
 LSB-V3 Installation:
 
-Inline LFS installation:  make install &&
-                          sed -i.bak 's@/etc/rc.d@/etc@' /etc/inittab
+NOTE:  initd-tools must be installed prior to installation of these scripts.
 
+initd-tools installation:
 
-After LFS:  for file in /etc/rc.d /etc/sysconfig/rc /etc/sysconfig/modules \
-                /etc/sysconfig/createfiles
-              do
-                mv $file $file.bak
-              done &&
-            make install &&
-            sed -i.bak 's@/etc/rc.d@/etc@' /etc/inittab
+Download initd-tools from: 
+http://www.dwcab.com/downloads/initd-tools/initd-tools-0.1.2.tar.gz
 
+        ./configure &&
+        make &&
+        make check &&
+        make install
+    
+Inline installation of lsb-v3 bootscripts:
+        sudo make install
 
-With existing scripts:  HERE=$PWD
-                        cp -a /etc/rc.d /etc/rc.d.bak &&
-                        mv /etc/rc.d/* /etc &&
-                        cd /etc/rc.d &&
-                        ln -s ../rc*.d . &&
-                        ln -s ../init.d . &&
-                        for file in /etc/rc.d /etc/syconfig/rc \
-                            /etc/sysconfig/modules /etc/sysconfig/createfiles
-                          do
-                            mv $file $file.bak
-                          done &&
-                        cd $HERE &&
-                        unset HERE &&
-                        make install &&
-                        sed -i.bak 's@/etc/rc.d@/etc/@' /etc/inittab
-                        
+After LFS installation of lsb-v3 bootscripts:
+        for file in /etc/rc.d /etc/sysconfig/rc /etc/sysconfig/modules \
+            /etc/sysconfig/createfiles
+        do
+            mv $file $file.bak
+        done &&
+        make install
+
+There is no longer an upgrade path for existing installations. You will have
+to reinstall any bootscripts installed by BLFS or any self written scripts.
+Fortunately, this will soon be very easy for BLFS scripts as a contrib 
+directory containing lsb-v3 scripts will be added in the near future.
+
 That's it!
