@@ -3,10 +3,10 @@
 
 ### BEGIN INIT INFO
 # Provides:            $network
-# Required-Start:      $syslog
-# Should-Start:
-# Required-Stop:       $syslog $local_fs swap localnet 
-# Should-Stop:
+# Required-Start:
+# Should-Start:        $syslog
+# Required-Stop:       $local_fs swap localnet 
+# Should-Stop:         $syslog
 # Default-Start:       3 4 5
 # Default-Stop:        0 1 2 6
 # Short-Description:   Starts and configures network interfaces.
