@@ -3,10 +3,10 @@
 
 ### BEGIN INIT INFO
 # Provides:            $time
-# Required-Start:      modules
-# Should-Start:
-# Required-Stop:       $syslog
-# Should-Stop:
+# Required-Start:
+# Should-Start:        modules
+# Required-Stop:
+# Should-Stop:         $syslog
 # Default-Start:       S
 # Default-Stop: 
 # Short-Description:   Stores and restores time from the hardware clock
