@@ -447,7 +447,7 @@ log_success_msg()
         if [ $( hostname ) = "(none)" ]; then
             BTTIMESPEC=""
         else
-            BTTIMESPEC="$(echo `date +"%b %d %T"` `hostname`) "
+            BTTIMESPEC="$(echo `date -u +"%b %d %T"` `hostname`) "
         fi
         echo "${BTTIMESPEC}bootlog: ${@} Successful" >> "${TEMPFS_MOUNT}/.bootlog"
     fi
@@ -474,7 +474,7 @@ log_failure_msg()
         if [ $( hostname ) = "(none)" ]; then
             BTTIMESPEC=""
         else
-            BTTIMESPEC="$(echo `date +"%b %d %T"` `hostname`) "
+            BTTIMESPEC="$(echo `date -u +"%b %d %T"` `hostname`) "
         fi
         echo "${BTTIMESPEC}bootlog: ${@} Failed!" >> "${TEMPFS_MOUNT}/.bootlog"
     fi
@@ -501,7 +501,7 @@ log_warning_msg()
         if [ $( hostname ) = "(none)" ]; then
             BTTIMESPEC=""
         else
-            BTTIMESPEC="$(echo `date +"%b %d %T"` `hostname`) "
+            BTTIMESPEC="$(echo `date -u +"%b %d %T"` `hostname`) "
         fi
         echo "${BTTIMESPEC}bootlog: ${@} Warning" >> "${TEMPFS_MOUNT}/.bootlog"
     fi
